--- a/resources/design/desktop/flat/layout/job.xml
+++ b/resources/design/desktop/flat/layout/job.xml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <layout>
-    <job_index_index>
-
-    </job_index_index>
-
-    <job_index_template>
+    <job_application_edit>
         <views>
-            <content class="core_view_default" template="html/default.phtml" />
-            <page_content class="core_view_default" template="job/index.phtml" />
+            <content class="application_view_customization_features_edit_tabbareditor" template="application/customization/features/edit/tabbar_editor.phtml" />
+            <content_editor class="core_view_default" template="job/application/edit.phtml" />
         </views>
-    </job_index_template>
+    </job_application_edit>
 
 </layout>
