feat: new files

--- a/resources/design/desktop/flat/template/job/application/edit.css
+++ b/resources/design/desktop/flat/template/job/application/edit.css
@@ -9,3 +9,15 @@
 
     and write custom CSS right there
 */
+
+.edit-action,
+.delete-action {
+    padding: 8px 0 0 0 !important;
+    margin: 0;
+    width: 20px;
+    cursor: pointer;
+}
+
+.delete-action {
+    padding-top: 5px !important;
+}
