feat: tmp commit

--- a/resources/var/apps/modules/job/templates/l1/view.html
+++ b/resources/var/apps/modules/job/templates/l1/view.html
@@ -15,7 +15,7 @@
         <div class="list">
 
             <div class="item item-image item-custom" ng-if="place.banner" >
-                <img src="{{ place.banner }}" width="100%" />
+                <img ng-src="{{ place.banner }}" width="100%" />
             </div>
 
             <div class="item item-divider item-divider-custom" ng-if="place.title">
