--- a/resources/var/apps/modules/job/templates/l1/list.html
+++ b/resources/var/apps/modules/job/templates/l1/list.html
@@ -8,7 +8,7 @@
         </button>
     </ion-nav-buttons>
 
-    <div class="bar bar-subheader">
+    <div class="bar bar-subheader" ng-show="options.display_search">
         <div class="item item-input-inset job-search">
             <div class="item-input-wrapper textual">
                 <i class="icon ion-ios-search"></i>
@@ -16,16 +16,16 @@
             </div>
 
             <div class="item-input-wrapper place">
-                <i class="icon ion-ios-location-outline"></i>{{ "Place" || translate }}
+                <i class="icon ion-ios-location-outline" ng-click="filterModal();"></i>{{ "Place" || translate }}
             </div>
 
             <div class="item-input-wrapper more">
-                <i class="icon ion-ios-plus-outline"></i>
+                <i class="icon ion-ios-plus-outline" ng-click="filterModal();"></i>
             </div>
         </div>
     </div>
 
-    <ion-content class="l1 has-subheader" sb-background-image>
+    <ion-content class="l1" ng-class="{ 'has-subheader': options.display_search }" sb-background-image>
 
         <ion-refresher
                 pulling-text="Pull to refresh..."
@@ -41,8 +41,8 @@
         <div class="list" ng-show="collection.length">
 
             <div ng-click="showItem(item)" ng-repeat="item in collection | filter: filterPlaces">
-                <div class="item item-custom item-place" ng-class="{ 'item-avatar': item.company_logo && options.show_logo }">
-                    <img ng-src="{{ item.company_logo }}" ng-if="item.company_logo && options.show_logo" />
+                <div class="item item-custom item-place" ng-class="{ 'item-thumbnail-custom': item.company_logo && options.display_place_icon }">
+                    <img ng-src="{{ item.company_logo }}" ng-if="item.company_logo && options.display_place_icon" />
                     <h2>{{ item.title }} <span ng-if="item.contract_type">{{ item.contract_type }}</span></h2>
                     <p class="subtitle" ng-if="item.subtitle">{{ item.subtitle }}</p>
                     <p class="subtitle-company" ng-if="item.company_name || item.location">
@@ -69,53 +69,3 @@
 
     </ion-content>
 </ion-view>
-
-<style type="text/css">
-    .job-search {
-        padding: 0px;
-        border: 0px;
-    }
-
-    .job-search i.icon {
-        font-size: 24px;
-    }
-
-    .job-search .textual,
-    .job-search .place,
-    .job-search .more {
-        padding: 0px;
-        border-radius: 0;
-        border: 0px;
-        background-color: transparent;
-    }
-    .job-search .textual {
-        width: 100%;
-    }
-    .job-search .place {
-        float: right;
-        max-width: 100px;
-        font-size: 14px;
-    }
-    .job-search .place i.icon {
-        font-size: 22px;
-        margin-right: 6px;
-    }
-    .job-search .more {
-        float: right;
-        max-width: 30px;
-    }
-
-    .item-place {
-        padding: 6px;
-    }
-
-    .item-place p.subtitle {
-        font-size: 13px;
-        opacity: 0.7;
-    }
-
-    .item-place p.subtitle-company {
-        font-size: 13px;
-        opacity: 0.5;
-    }
-</style>
