feat: search, keywords, categories, distance

--- a/resources/var/apps/modules/job/templates/l1/more.html
+++ b/resources/var/apps/modules/job/templates/l1/more.html
@@ -22,9 +22,9 @@
             </div>
 
             <div class="item item-custom">
-                <h2>{{ "Distance" | translate }} <span class="job-distance" ><span ng-bind="distance_range[Math.floor(filters.distance)]"></span>{{ "km" | translate }}</span></h2>
+                <h2>{{ "Distance" | translate }} <span class="job-distance" ><span ng-bind="distance_range[Math.floor(filters.radius)]"></span>{{ "km" | translate }}</span></h2>
                 <div>
-                    <input type="range" ng-model="filters.distance" min="0" max="9" step="0.01" />
+                    <input type="range" ng-model="filters.radius" min="0" max="10" step="0.1" />
                 </div>
             </div>
 
@@ -35,15 +35,15 @@
                 </div>
             </div>
 
-            <div class="item item-custom">
-                <ion-checkbox ng-repeat="category in categories" ng-model="category.is_checked">{{ category.title }}</ion-checkbox>
+            <div class="item item-custom" ng-if="filters.categories.length">
+                <ion-checkbox ng-repeat="category in filters.categories" ng-model="category.is_checked">{{ category.title }}</ion-checkbox>
             </div>
 
         </div>
 
         </ion-list>
 
-        <div class="jobpadding">
+        <div class="job-padding">
             <button class="button button-block button-custom item-icon-left" ng-click="validateFilters();">
                 <i class="icon ion-ios-search"></i>{{ "Search" | translate }}
             </button>
