--- a/resources/var/apps/modules/job/templates/l1/view-company.html
+++ b/resources/var/apps/modules/job/templates/l1/view-company.html
@@ -4,6 +4,9 @@
         <button ng-show="social_sharing_active" class="button button-clear" ng-click="share()">
             <i class="icon ion-ios-upload-outline"></i>
         </button>
+        <button ng-click="goHome()" class="button button-clear header-item">
+            <i class="icon ion-ios-list-outline"></i>
+        </button>
     </ion-nav-buttons>
 
     <ion-content sb-background-image>
