--- a/resources/design/desktop/flat/template/job/application/edit.phtml
+++ b/resources/design/desktop/flat/template/job/application/edit.phtml
@@ -94,9 +94,11 @@ $delete_category_form = new Job_Form_Category_Delete();
         <li role="presentation">
             <a href="#companies" aria-controls="companies" role="tab" data-toggle="tab"><?php echo __("Companies") ?></a>
         </li>
+        <?php if($companies->count() > 0): ?>
         <li role="presentation">
             <a href="#places" aria-controls="places" role="tab" data-toggle="tab"><?php echo __("Places") ?></a>
         </li>
+        <?php endif; ?>
         <li role="presentation">
             <a href="#categories" aria-controls="categories" role="tab" data-toggle="tab"><?php echo __("Categories") ?></a>
         </li>
@@ -131,7 +133,7 @@ $delete_category_form = new Job_Form_Category_Delete();
 
             <div class="feature-block-create">
                 <h3 class="title-editor no-border-radius title-feature-indent">
-                    <?php echo __('Create a new Company'); ?>
+                    <?php echo __('Create a new company'); ?>
                 </h3>
                 <div class="container-fluid">
                     <?php echo $form_company; ?>
@@ -142,7 +144,7 @@ $delete_category_form = new Job_Form_Category_Delete();
                 <div class="feature-block-list">
                     <div class="margin-top">
                         <h3 class="title-editor no-border-radius title-feature-indent">
-                            <?php echo __('Manage Companies'); ?>
+                            <?php echo __('Manage'); ?>
                             <button type="button" class="toggle_design color-blue pull-right bt-header-right btn feature-toggle-items">
                                 <i class="fa fa-chevron-down"></i>
                             </button>
@@ -216,7 +218,7 @@ $delete_category_form = new Job_Form_Category_Delete();
 
                 <div class="feature-block-create">
                     <h3 class="title-editor no-border-radius title-feature-indent">
-                        <?php echo __('Create a new Place'); ?>
+                        <?php echo __('Create a new place'); ?>
                     </h3>
                     <div class="container-fluid">
                         <?php echo $form_place; ?>
@@ -230,7 +232,7 @@ $delete_category_form = new Job_Form_Category_Delete();
                 <div class="feature-block-list">
                     <div class="margin-top">
                         <h3 class="title-editor no-border-radius title-feature-indent">
-                            <?php echo __('Manage Places'); ?>
+                            <?php echo __('Manage'); ?>
                             <button type="button" class="toggle_design color-blue pull-right bt-header-right btn feature-toggle-items">
                                 <i class="fa fa-chevron-down"></i>
                             </button>
@@ -292,25 +294,23 @@ $delete_category_form = new Job_Form_Category_Delete();
 
         <!-- START CATEGORY TAB -->
         <div role="tabpanel" class="tab-pane" id="categories">
-            <?php if($companies->count() > 0): ?>
-                <div class="feature-block-add">
-                    <h3 class="title-editor no-border-radius title-feature-indent">
-                        <?php echo __('Add category'); ?>
-                        <button type="button" class="feature-toggle-add toggle_design color-blue pull-right bt-header-right btn">
-                            <i class="fa fa-plus"></i>
-                        </button>
-                    </h3>
-                </div>
+            <div class="feature-block-add">
+                <h3 class="title-editor no-border-radius title-feature-indent">
+                    <?php echo __('Add category'); ?>
+                    <button type="button" class="feature-toggle-add toggle_design color-blue pull-right bt-header-right btn">
+                        <i class="fa fa-plus"></i>
+                    </button>
+                </h3>
+            </div>
 
-                <div class="feature-block-create">
-                    <h3 class="title-editor no-border-radius title-feature-indent">
-                        <?php echo __('Create a new Category'); ?>
-                    </h3>
-                    <div class="container-fluid">
-                        <?php echo $form_category; ?>
-                    </div>
+            <div class="feature-block-create">
+                <h3 class="title-editor no-border-radius title-feature-indent">
+                    <?php echo __('Create a new Category'); ?>
+                </h3>
+                <div class="container-fluid">
+                    <?php echo $form_category; ?>
                 </div>
-            <?php endif; ?>
+            </div>
 
             <?php echo $this->createPartialHtml('no_item', 'core_view_default', 'application/customization/features/edit/no_item.phtml'); ?>
 
