--- a/resources/var/apps/modules/job/css/styles.css
+++ b/resources/var/apps/modules/job/css/styles.css
@@ -23,8 +23,9 @@
 
 .job-search .place {
     float: right;
-    max-width: 100px;
+    max-width: 200px;
     font-size: 14px;
+    overflow: hidden;
 }
 
 .job-search .place i.icon {
@@ -59,6 +60,7 @@
     z-index: 1000;
     border: 4px solid rgba(255,255,255,0.85);
     border-radius: 2px;
+    background: white;
 }
 
 .job-company-header {
@@ -138,4 +140,17 @@
 
 .job-padding {
     padding: 0 20%;
+}
+
+.platform-android .job-more i.checkbox-icon::before {
+    margin-top: 5px;
+}
+
+.platform-android .job-more label.item.item-checkbox.ng-valid {
+    margin-bottom: 12px;
+}
+
+.platform-android .job-more i.checkbox-icon::after {
+    margin-left: -10px;
+    margin-top: -1px;
 }
