--- a/resources/var/apps/modules/job/templates/l1/list.html
+++ b/resources/var/apps/modules/job/templates/l1/list.html
@@ -2,25 +2,23 @@
     <ion-nav-title>{{ page_title }}</ion-nav-title>
     <ion-nav-buttons side="secondary">
         <div sb-tooltip collection="tooltip.collection" current-item="tooltip.current_item" button-label="tooltip.button_label" on-item-clicked="showTooltip(object)" ng-if="tooltip"></div>
-        <button ng-click="right_button.action()" class="button button-clear header-item" ng-if="right_button">
-            <span class="back-text"><span class="default-title">{{ right_button.label }}</span></span>
-            <i class="icon" ng-class="right_button.icon"></i>
-        </button>
     </ion-nav-buttons>
 
     <div class="bar bar-subheader" ng-show="options.display_search">
         <div class="item item-input-inset job-search">
             <div class="item-input-wrapper textual">
                 <i class="icon ion-ios-search"></i>
-                <input type="text" placeholder='{{ "Search..." || translate }}' ng-model="filters.fulltext" />
+                <input type="text" placeholder='{{ "Search..." | translate }}' ng-model="filters.fulltext" />
             </div>
 
-            <div class="item-input-wrapper place">
-                <i class="icon ion-ios-location-outline" ng-click="filterModal();"></i>{{ "Place" || translate }}
+            <div class="item-input-wrapper place" ng-click="filterModal();">
+                <i class="icon ion-ios-location-outline"></i>
+                <span ng-show="filters.locality">{{ filters.locality }}</span>
+                <span ng-show="!filters.locality">{{ "Place" | translate }}</span>
             </div>
 
-            <div class="item-input-wrapper more">
-                <i class="icon ion-ios-plus-outline" ng-click="filterModal();"></i>
+            <div class="item-input-wrapper more" ng-click="filterModal();">
+                <i class="icon ion-ios-plus-outline"></i>
             </div>
         </div>
     </div>
@@ -29,7 +27,8 @@
 
         <ion-refresher
                 pulling-text="Pull to refresh..."
-                on-refresh="pullToRefresh()">
+                on-refresh="pullToRefresh()"
+                ng-if="!filters.more_search">
         </ion-refresher>
 
         <div ng-include="template_header"></div>
@@ -44,7 +43,7 @@
                 <div class="item item-custom item-place" ng-class="{ 'item-thumbnail-custom': item.company_logo && options.display_place_icon }">
                     <img ng-src="{{ item.company_logo }}" ng-if="item.company_logo && options.display_place_icon" />
                     <h2>{{ item.title }} <span ng-if="item.contract_type">{{ item.contract_type }}</span></h2>
-                    <p class="subtitle" ng-if="item.subtitle">{{ item.subtitle }}</p>
+                    <p class="subtitle" ng-if="item.subtitle" ng-bind-html="item.subtitle"></p>
                     <p class="subtitle-company" ng-if="item.company_name || item.location">
                         <span ng-if="item.company_name">{{ item.company_name }}</span>
                         <span ng-if="item.company_name && item.location">, </span>
@@ -60,7 +59,7 @@
             </div>
         </div>
 
-        <ion-infinite-scroll ng-if="can_load_older_places"
+        <ion-infinite-scroll ng-if="can_load_older_places && !filters.more_search"
                              on-infinite="loadMore()"
                              immediate-check="false"
                              distance="10%"
