--- a/resources/design/desktop/siberian/template/job/application/edit.css
+++ b/resources/design/desktop/siberian/template/job/application/edit.css
@@ -26,3 +26,8 @@
 .toggle-action {
     padding-top: 7px !important;
 }
+
+table tbody td {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
