--- a/resources/var/apps/modules/job/templates/l1/view.html
+++ b/resources/var/apps/modules/job/templates/l1/view.html
@@ -34,11 +34,20 @@
                 <p>{{ place.location }}</p>
             </div>
 
-            <div class="item item-text-wrap item-icon-left item-custom" ng-if="place.income_from || place.income_to">
+            <div class="item item-text-wrap item-icon-left item-custom" ng-if="options.display_income && (place.income_from || place.income_to)">
                 <i class="icon ion-social-usd-outline"></i>
                 <p>
                     <span ng-show="place.income_from">{{ place.income_from }}</span>
                     <span ng-show="place.income_to"> {{ "to" | translate }} {{ place.income_to }}</span>
+                </p>
+            </div>
+
+            <div class="item item-text-wrap item-icon-left item-custom" ng-if="place.display_contact != 'hidden' && place.email" ng-click="contactAction();">
+                <i class="icon ion-ios-email-outline"></i>
+                <p>
+                    <span ng-if="place.display_contact == 'contactform' || place.display_contact == 'both'">{{ "Contact" | translate }}</span>
+                    <span ng-if="place.display_contact == 'both'">: </span>
+                    <span ng-if="place.display_contact == 'email' || place.display_contact == 'both'">{{ place.email }}</span>
                 </p>
             </div>
 
