--- a/resources/design/desktop/flat/template/job/application/edit.phtml
+++ b/resources/design/desktop/flat/template/job/application/edit.phtml
@@ -327,7 +327,7 @@ $delete_category_form = new Job_Form_Category_Delete();
                 <div class="feature-block-list">
                     <div class="margin-top">
                         <h3 class="title-editor no-border-radius title-feature-indent">
-                            <?php echo __('Manage Categories'); ?>
+                            <?php echo __('Manage'); ?>
                             <button type="button" class="toggle_design color-blue pull-right bt-header-right btn feature-toggle-items">
                                 <i class="fa fa-chevron-down"></i>
                             </button>
