--- a/resources/var/apps/modules/job/css/styles.css
+++ b/resources/var/apps/modules/job/css/styles.css
@@ -158,3 +158,81 @@
 .job-contact textarea {
     min-height: 120px;
 }
+
+.ta-root button {
+    width: 10.6%;
+    background: none;
+}
+
+.ta-root .btn-group:first-of-type {
+    margin-bottom: 4px;
+}
+
+.ta-root .btn-group button {
+    border: 1px solid grey;
+    border-width: 1px 0px 1px 1px;
+}
+
+.ta-root .btn-group button:first-of-type {
+    border-width: 1px 0px 1px 1px;
+    border-radius: 2px 0 0 2px;
+}
+
+.ta-text.ta-editor {
+    margin-right: 4.6%;
+    padding: 0;
+}
+
+.ta-root .btn-group button:last-of-type {
+    border-width: 1px 1px 1px 1px;
+    border-radius: 0 2px 2px 0;
+}
+
+.ta-root .ta-editor * {
+    overflow: auto;
+    text-overflow: clip;
+    white-space: normal;
+}
+
+.ta-editor.ta-html, .ta-scroll-window.form-control {
+    min-height: 200px;
+    height: 200px;
+}
+
+.job-line-return {
+    text-overflow: clip;
+    white-space: initial;
+}
+
+.job-small-text {
+    font-size: 12px;
+}
+
+.job-inactive {
+    background-color: #ac2925;
+    color: white;
+    text-transform: uppercase;
+    padding: 0px 30px 30px 30px;
+    font-size: 11px;
+    font-weight: bold;
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    text-align: center;
+    position: absolute;
+    bottom: -10px;
+    right: -42px;
+}
+
+button.create-job {
+    margin-top: -7px;
+    background: transparent;
+    border: none;
+    color: inherit;
+}
+
+.job-admin span {
+    font-size: 13px;
+}
