--- a/resources/var/apps/modules/job/templates/l1/view.html
+++ b/resources/var/apps/modules/job/templates/l1/view.html
@@ -1,12 +1,16 @@
 <ion-view>
     <ion-nav-title>{{ page_title }}</ion-nav-title>
     <ion-nav-buttons side="secondary">
-        <button ng-show="social_sharing_active" class="button button-clear" ng-click="share()">
+        <button ng-show="social_sharing_active && !is_admin" class="button button-clear" ng-click="share()">
             <i class="icon ion-ios-upload-outline"></i>
         </button>
         <button ng-click="goHome()" class="button button-clear header-item">
             <i class="icon ion-ios-list-outline"></i>
         </button>
+        <button ng-show="is_admin" ng-click="manageModal()" class="button button-clear header-item">
+            <i class="icon ion-ios-compose-outline"></i>
+        </button>
+
     </ion-nav-buttons>
 
     <ion-content sb-background-image>
@@ -19,6 +23,7 @@
 
             <div class="item item-image item-custom" ng-if="place.banner" >
                 <img ng-src="{{ place.banner }}" width="100%" />
+                <div ng-show="!place.is_active" class="job-inactive">{{ "inactive" | translate }}</div>
             </div>
 
             <div class="item item-divider item-divider-custom" ng-if="place.title">
@@ -42,7 +47,7 @@
                 </p>
             </div>
 
-            <div class="item item-text-wrap item-icon-left item-custom" ng-if="place.display_contact != 'hidden' && place.email" ng-click="contactAction();">
+            <div class="item item-text-wrap item-icon-left item-custom" ng-if="place.display_contact != 'hidden' && place.email != ''" ng-click="contactAction();">
                 <i class="icon ion-ios-email-outline"></i>
                 <p>
                     <span ng-if="place.display_contact == 'contactform' || place.display_contact == 'both'">{{ "Contact" | translate }}</span>
